--- a/app/views/swim_races/show.html.erb
+++ b/app/views/swim_races/show.html.erb
@@ -15,12 +15,10 @@
             </div>
           </div>
           <% if @swim_race.user_id == current_user.id %>
-            <button class="btn btn-secondary"><%= link_to "Modifier cette course", edit_swim_race_path(@swim_race) %>
-            </button>
-            <button class="btn btn-warning"><%= link_to "Supprimer cette course", swim_race_path(@swim_race),
+            <%= link_to raw('<i class="fas fa-edit"></i>Modifier cette course'), edit_swim_race_path(@swim_race) %>
+            <%= link_to raw('<i class="far fa-trash-alt"></i> Supprimer cette course'), swim_race_path(@swim_race),
                   method: :delete,
                   data: { confirm: "Are you sure?" } %>
-            </button>
           <% end %>
           <br>
           <div class="swim-events">
@@ -35,17 +33,15 @@
                 <p><strong>Informations de l'épreuve:</strong></p>
                 <p><%= event.comment %></p>
                 <% if @swim_race.user_id == current_user.id %>
-                  <%= link_to "Supprimer", swim_race_swim_event_path(@swim_race, event),
+                  <%= link_to raw('<i class="far fa-trash-alt"></i> Supprimer'), swim_race_swim_event_path(@swim_race, event),
                                     method: :delete,
                                     data: { confirm: "Are you sure?" } %>
                 <% end %>
               </div>
             <% end %>
             <% if @swim_race.user_id == current_user.id %>
-              <button class="btn btn-secondary"><%= link_to "Ajouter des épreuves",  new_swim_race_swim_event_path(@swim_race) %>
-              </button>
-              <button class="btn btn-warning"><%= link_to "Modifier des épreuves", edit_swim_race_swim_event_path(@swim_race) %>
-              </button>
+              <%= link_to raw('<i class="fas fa-plus-circle"></i> Ajouter des épreuves'),  new_swim_race_swim_event_path(@swim_race) %>
+              <%= link_to raw('<i class="fas fa-edit"></i> Modifier des épreuves'), edit_swim_race_swim_event_path(@swim_race) %>
             <% end %>
           </div>
         </div>
