--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<div class="banner" style="background-image: linear-gradient(rgba(4,6,1,0.4), rgba(6,102,248,0.5)), url(http://petitbrindefemme.e.p.f.unblog.fr/files/2014/11/open-water-2.jpg);">
+<div class="banner" style="background-image: linear-gradient(rgba(100,100,100,0.4),rgba(100,100,100,0.4)), url(https://res.cloudinary.com/dzxrdf9za/image/upload/v1553506386/Open-Water-Swim-Races-6-1024x680.jpg);">
   <div class="container">
     <h1>Eau libre</h1>
     <p>Trouve ta prochaine course de natation en eau libre près de chez toi:</p>
@@ -9,7 +9,9 @@
             <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name"}, placeholder: "Chercher une ville", label: false %>
           </div>
           <div class="col-xs-12 cl-md-3">
-            <%= f.submit "Rechercher", class: "btn btn-primary" %>
+            <%= button_tag type: 'submit', class: "btn primary" do %>
+              <i class="fas fa-search"></i>
+            <% end %>
           </div>
         </div>
       <% end %>
