--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -4,6 +4,13 @@
   align-items: center;
 }
 
+.sign-form {
+  padding: 2em;
+  border-radius: 2em;
+  background: #FFFEFE;
+  color: black;
+}
+
 #form_new_event {
   background-color: rgba(290,290,290, 0.6);
   border-radius: 1em;
@@ -15,6 +22,7 @@
     border-radius: 5em;
     background-color: rgba(255, 255, 255, 0);
     border: solid white 2px;
+    color: black;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
