--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -38,36 +38,13 @@
   align-items: center;
 }
 
-.race-banner {
-  background-size: cover !important;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.event-banner {
-  background-size: cover !important;
-  background-repeat: repeat;
-  h1 {
-  text-align: center;
-  color: white;
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-  }
-}
-
-.race-banner h1 {
-  text-align: center;
-  color: white;
-  font-size: 50px;
-  font-weight: bold;
-  text-shadow: 0px 1px rgba(0, 0, 0, 0.2);
-}
-
-
 .search-form {
   position: relative;
+
+}
+
+.border-blue {
+  border: solid #3e71e1 !important;
 }
 
 .search-form-home {
