--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -8,6 +8,11 @@
 @import "button";
 @import "showrace";
 
+body {
+  background-color: #FBFDFF;
+}
+
+
 h1 {
   font-family: 'Roboto', sans-serif;
 }
@@ -23,6 +28,7 @@ p {
 #map {
   width:100%;
   height:90vh;
+  border-radius: 1em;
 }
 
 .back {
