index form button

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -13,3 +13,11 @@
     text-decoration: none;
   }
 }
+
+
+
+.btn-search-form {
+  background-color: #3e71e1;
+  color: white;
+  border-radius: 0em 1em 1em 0em;
+}
