--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -1,21 +1,25 @@
 <br>
 <br>
 <br>
+<div class="container">
 <div class="row">
   <div class="col-xs-12 col-md-4 offset-md-4">
     <%= simple_form_for :search, url: swim_races_path, method: "GET", input_html: { class: "form-inline search-form" } do |f| %>
      <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name", class: "border-blue"}, placeholder: "Chercher une ville", label: false %>
-      <%= f.submit "Rechercher", class: "btn btn-primary inline-absolute" %>
+
+     <%= button_tag type: 'submit', class: "btn btn-search-form inline-absolute" do %>
+        <i class="fas fa-search"></i>
+      <% end %>
     <% end %>
   </div>
 </div>
 <br>
-<div class="container">
+
   <br>
   <% if @city_name.nil? %>
       <h2 class="text-center">Rechercher une course:</h2>
     <% else %>
-      <h2 class="text-center">Les courses autour de <%= @city_name %></h2>
+      <h2 class="text-center">Résultats autour de <%= @city_name %></h2>
   <% end %>
     <div class="row">
       <div class="col-xs-12 col-md-6">
