ok scroll overflow

--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -2,29 +2,27 @@
 <br>
 <br>
 <div class="container">
-<div class="row">
-  <div class="col-xs-12 col-md-4 offset-md-4">
-    <%= simple_form_for :search, url: swim_races_path, method: "GET", input_html: { class: "form-inline search-form" } do |f| %>
-     <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name", class: "border-blue"}, placeholder: "Chercher une ville", label: false %>
-
-     <%= button_tag type: 'submit', class: "btn btn-search-form inline-absolute" do %>
-        <i class="fas fa-search"></i>
+  <div class="row">
+    <div class="col-xs-12 col-md-4 offset-md-4">
+      <%= simple_form_for :search, url: swim_races_path, method: "GET", input_html: { class: "form-inline search-form" } do |f| %>
+       <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name", class: "border-blue"}, placeholder: "Chercher une ville", label: false %>
+       <%= button_tag type: 'submit', class: "btn btn-search-form inline-absolute" do %>
+          <i class="fas fa-search"></i>
+        <% end %>
       <% end %>
-    <% end %>
+    </div>
   </div>
-</div>
-<br>
-
+  <br>
   <br>
   <% if @city_name.nil? %>
       <h2 class="text-center">Rechercher une course:</h2>
     <% else %>
-      <h2 class="text-center">Résultats autour de <%= @city_name %></h2>
+      <h4 class="text-center">Résultats autour de <%= @city_name %></h4>
   <% end %>
     <div class="row">
       <div class="col-xs-12 col-md-6">
         <div class="race-container">
-            <div class="row">
+            <div class="row scroll-overflow">
               <% @swim_races.each do |swim_race| %>
                 <div class="col-xs-12 col-md-12">
                   <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path swim_race.photo %>);">
