--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -27,14 +27,14 @@ p {
 
 #map {
   width:100%;
-  height:90vh;
+  height:70vh;
   border-radius: 1em;
 }
 
-.back {
-  border-radius: 0.2em;
-  background-color: #EEEFEE;
-  box-shadow:0.01em 0.01em 0.01em black;
+
+.scroll-overflow {
+  max-height: 70vh;
+  overflow: scroll;
 }
 
 .space-between {
@@ -53,7 +53,8 @@ p {
   position: sticky;
   top: 10px;
   flex-grow: 1;
-  height: 100vh;
+  height: 80vh;
+  padding: 0.3em;
 }
 
 table {
