--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,18 +1,38 @@
 .card {
   height: 175px;
-  text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-size: cover !important;
-  background-position: center;
   color: white;
   position: relative;
   margin: 0.5em 0em;
+  border: 0px;
+  background-color: #FBFDFF
 }
-.card-user {
+
+.card-image {
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+  width: 38%;
+  background-size: cover !important;
+  background-position: center;
+  border-radius: 1em 0em 0em 1em;
   position: absolute;
-  right: 10px;
-  top: 10px;
-  width: 40px;
-  border-radius: 50%;
+  top: 1px;
+  left: 1px;
+  height:100%
+}
+
+.card-infos {
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 0em 1em 1em 0em;
+  position: absolute;
+  top: 1px;
+  left: 40%;
+  width: 60%;
+  color: #0C4E71;
+  height: 100%;
+}
+
+.card-details {
+  position: relative;
+
 }
 .card-date {
   position: absolute;
@@ -50,6 +70,7 @@
   z-index: 2;
   background: black;
   opacity: 0;
+  border-radius: 1em;
 }
 .card-link:hover {
   opacity: 0.1;
