--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -25,19 +25,24 @@
             <div class="row scroll-overflow">
               <% @swim_races.each do |swim_race| %>
                 <div class="col-xs-12 col-md-12">
-                  <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path swim_race.photo %>);">
-                    <div class="card-date"><%= swim_race.dates %></div>
-                    <div class="card-name">
-                      <h2><%= swim_race.name %></h2>
-                      <p><%= swim_race.city_name %></p>
-                    </div>
-                    <% events = swim_race.swim_events %>
-                      <div class="card-events">
-                        <ul class="list-inline">
-                        <% events.each do |event| %>
-                          <li class="list-inline-item"><%= event.distance %> km</li>
-                        <% end %>
-                        </ul>
+                  <div class="card">
+                    <div class="card-image" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= cl_image_path swim_race.photo %>);"></div>
+                    <div class="card-infos">
+                      <div class="card-details">
+                        <div class="card-date"><%= swim_race.dates %></div>
+                        <div class="card-name">
+                          <h2><%= swim_race.name %></h2>
+                          <p><i class="fas fa-map-marker-alt"></i> <%= swim_race.city_name %></p>
+                        </div>
+                        <% events = swim_race.swim_events %>
+                          <div class="card-events">
+                            <ul class="list-inline">
+                            <% events.each do |event| %>
+                              <li class="list-inline-item"><%= event.distance %> km</li>
+                            <% end %>
+                            </ul>
+                          </div>
+                        </div>
                       </div>
                     <%= link_to("", swim_race_path(swim_race.id), class:"card-link")  %>
                   </div>
