dernière modifs sur index swim race

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -9,7 +9,7 @@
 @import "showrace";
 
 body {
-  background-color: #FBFDFF;
+  background-color: #F7F7F7;
 }
 
 
@@ -28,7 +28,7 @@ p {
 #map {
   width:100%;
   height:70vh;
-  border-radius: 1em;
+  border-radius: 0.25em;
 }
 
 
