--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,7 @@
     <%= link_to raw('<i class="fas fa-search"></i> Chercher une course'), swim_races_path, class: "navbar-wagon-item navbar-wagon-link white" %>
     <%= link_to raw('<i class="fas fa-swimmer"></i> Créer une nouvelle course'), new_swim_race_path, class: "navbar-wagon-item navbar-wagon-link white" %>
     <%= link_to raw('<i class="fas fa-tasks"></i> Gérer mes courses'),  swim_races_my_races_path, class: "navbar-wagon-item navbar-wagon-link white" %>
+    <%= link_to raw('Se déconnecter'),   destroy_user_session_path, :method => :delete, class: "navbar-wagon-item navbar-wagon-link white" %>
     <% else %>
       <%= link_to raw('<i class="fas fa-search"></i> Chercher une course'), swim_races_path, class: "navbar-wagon-item navbar-wagon-link white" %>
       <%= link_to raw('<i class="fas fa-swimmer"></i> Créer une nouvelle course'), new_swim_race_path, class: "navbar-wagon-item navbar-wagon-link white" %>
@@ -26,6 +27,8 @@
           <li><%= link_to raw('<i class="fas fa-search"></i> Chercher une course'), swim_races_path%></li>
           <li><%= link_to raw('<i class="fas fa-swimmer"></i> Créer une nouvelle course'), new_swim_race_path %></li>
           <li><%= link_to raw('<i class="fas fa-tasks"></i> Gérer mes courses'),  swim_races_my_races_path %></li>
+          <li><%= link_to raw('Se déconnecter'),   destroy_user_session_path, :method => :delete, class: "navbar-wagon-item navbar-wagon-link white" %>
+            </li>
         <% else %>
         <li><%= link_to raw('<i class="fas fa-search"></i> Chercher une course'), swim_races_path%></li>
           <li><%= link_to raw('<i class="fas fa-swimmer"></i> Créer une nouvelle course'), new_swim_race_path %></li>
