--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -21,3 +21,10 @@
   color: white;
   border-radius: 0em 1em 1em 0em;
 }
+
+
+.btn-search-form-banner {
+  background-color: white;
+  color: black;
+  border-radius: 0em 1em 1em 0em;
+}
