--- a/app/assets/stylesheets/components/_showrace.scss
+++ b/app/assets/stylesheets/components/_showrace.scss
@@ -1,8 +1,9 @@
 .race-data {
   border-radius: 0.2em;
-  background-color: rgba(290,290,290, 0.6);
+  background-color: rgba(255,255,255, 0.6);
   box-shadow: 1em;
   padding: 0.5em;
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
 }
 
 .race-events {
@@ -10,15 +11,18 @@
   padding: 0.5em;
   margin-bottom: 1em;
   position: relative;
+  background-color: rgba(255,255,255, 0.6);
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
 }
 
 
 .swim-events {
-  background-color: rgba(290,290,290, 0.6);
+  background-color: rgba(255,255,255, 0.6);
   border-radius: 0.2em;
   padding: 0.5em;
   margin-bottom: 0.5em;
   position: relative;
+
 }
 
 .event-box {
