white placeholder and position in landing page

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -28,10 +28,9 @@
   height: calc(100vh - 70px);
 }
 
-.bottom-left {
+.top-left {
   position: absolute;
   top: 15%;
-  left: 5%;
 }
 
 .race-banner {
