--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -25,7 +25,7 @@
     color: black;
 }
 
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+.placeholder-home::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color: rgb(255, 255, 255);
 }
 
