--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,14 +14,11 @@
   }
 }
 
-
-
 .btn-search-form {
   background-color: #3e71e1;
   color: white;
   border-radius: 0em 1em 1em 0em;
 }
-
 
 .btn-search-form-banner {
   background-color: white;
@@ -31,4 +28,10 @@
 
 .blue-nav {
   background-color: #3e71e1;
+  border: solid 1px #3e71e1;
+}
+
+.grey {
+  background-color: #999BA0;
+  border: solid 1px #999BA0;
 }
