--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -1,8 +1,14 @@
-<%= simple_form_for [@swim_race, @swim_event], remote: true, html: { id: :form_new_event}  do |f| %>
-  <h5>Epreuve:</h5>
-  <div class="form-distance" >
-    <%= f.input :distance, label: 'Distance (km):' %>
-    <%= f.input :price, label: 'Price:'%>
-    <%= f.input :comment, label: 'Equipement:'%>
-  </div>
-<% end %>
+<div class="scroll-overflow-event" style="border-radius: 0.25em;">
+  <%= simple_form_for [@swim_race, @swim_event], remote: true, html: { id: :form_new_event}  do |f| %>
+    <h5>Epreuve:</h5>
+    <div class="form-distance" >
+      <div id="distance-prix">
+        <%= f.input :distance, label: 'Distance (km):' %>
+        <%= f.input :price, label: 'Prix:'%>
+      </div>
+      <div id="more-infos">
+        <%= f.input :comment, label: 'Infos complémentaires:', placeholder: "Ajouter ici les informations concernant les horaires, l'équipement autorisé..."%>
+      </div>
+    </div>
+  <% end %>
+</div>
