--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,4 +1,4 @@
-.form-distance {
+#distance-prix {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,11 +12,15 @@
 }
 
 #form_new_event {
-  background-color: rgba(255,255,255, 0.6);
+  background-color: rgba(255,255,255, 0.7);
   border-radius: 0.25em;
   padding: 1em;
   margin-bottom: 1em;
   color: #0C4E71;
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
+   label {
+    font-size: 1.2rem;
+  }
 }
 
 #swim_race_city_name {
@@ -24,6 +28,7 @@
     background-color: rgba(255, 255, 255, 0);
     border: solid white 2px;
     color: black;
+
 }
 
 .placeholder-home::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -55,9 +60,7 @@
   border: solid #3e71e1 !important;
 }
 
-.search-form-home {
 
-}
 .inline-absolute {
   position: absolute;
   top: 0px;
