ok swim_events fini

--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -1,4 +1,4 @@
-<div class="scroll-overflow-event" style="border-radius: 0.25em;">
+<div id="events-container" class="scroll-overflow-event" style="border-radius: 0.25em;">
   <%= simple_form_for [@swim_race, @swim_event], remote: true, html: { id: :form_new_event}  do |f| %>
     <h5>Epreuve:</h5>
     <div class="form-distance" >
