--- a/app/views/swim_events/new.html.erb
+++ b/app/views/swim_events/new.html.erb
@@ -5,7 +5,7 @@
       <div style="background-color: rgba(255, 255, 255, 0.7); border-radius: 0.25em; padding:1em;">
         <h2>Ajouter des épreuves à votre course "<%= @swim_race.name %>"</h2>
         <br>
-        <%= render 'shared/formevents', swim_race: @swim_race %>
+        <%= render 'shared/formevents'%>
       </div>
       <br>
       <div>
