--- a/app/assets/stylesheets/components/_showrace.scss
+++ b/app/assets/stylesheets/components/_showrace.scss
@@ -26,10 +26,10 @@
 }
 
 .event-box {
-  border: solid rgba(220,220,220, 0.6) 1px;
   border-radius: 0.2em;
   margin-bottom: 0.2em;
   padding: 0.2em;
+  box-shadow: 0px 6px 4px rgba(0, 0, 0, 0.25);
 }
 
 .top-right {
