side navbar on mobile is now working Just need to improve the design of the side menu

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -65,3 +65,23 @@ p {
 table {
   width: 100%;
 }
+
+.stop-scrolling {
+  height: 100%;
+  overflow: hidden;
+}
+
+.sidenav-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    height: 120vh;
+    background-color: rgba(0,0,0,.5);
+    z-index:997;
+  }
+
+.display {
+  display: block;
+  opacity: 1;
+}
