--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
     <%= stylesheet_pack_tag 'application', media: 'all' %>
      <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
   </head>
-  <body>
+  <body cz-shortcut-listen="true">
     <% unless current_page?(root_path) %>
       <%= render 'shared/navbar' %>
     <% end %>
@@ -19,5 +19,6 @@
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
+    <div class="sidenav-overlay" style="display: none;"></div>
   </body>
 </html>
