--- a/app/views/swim_races/index.html.erb
+++ b/app/views/swim_races/index.html.erb
@@ -5,7 +5,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-4 offset-md-4">
       <%= simple_form_for :search, url: swim_races_path, method: "GET", input_html: { class: "form-inline search-form" } do |f| %>
-       <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name", class: "border-blue placeholder-index"}, placeholder: "Chercher une ville", label: false %>
+       <%= f.input :city_name, input_html: {value: "", id: "swim_race_city_name", class: "border-blue placeholder-index color-blue"}, placeholder: "Chercher une ville", label: false %>
        <%= button_tag type: 'submit', class: "btn btn-search-form inline-absolute" do %>
           <i class="fas fa-search"></i>
         <% end %>
