--- a/app/views/shared/_formevents.html.erb
+++ b/app/views/shared/_formevents.html.erb
@@ -3,8 +3,8 @@
     <h5>Epreuve:</h5>
     <div class="form-distance" >
       <div id="distance-prix">
-        <%= f.input :distance, label: 'Distance (km):' %>
-        <%= f.input :price, label: 'Prix:'%>
+        <%= f.input :distance, label: 'Distance: (km)' %>
+        <%= f.input :price, label: 'Prix: (euros)'%>
       </div>
       <div id="more-infos">
         <%= f.input :comment, label: 'Infos complémentaires:', placeholder: "Ajouter ici les informations concernant les horaires, l'équipement autorisé..."%>
