--- a/app/views/swim_races/my_races.html.erb
+++ b/app/views/swim_races/my_races.html.erb
@@ -9,7 +9,7 @@
           <p><strong>Ville: </strong><%= swim_race.city_name %></p>
           <p><strong>Date de la course: </strong> <%= swim_race.dates %></p>
           <p><strong>Description:</strong></p>
-          <p><%= swim_race.description %></p>
+          <p><%= simple_format(swim_race.description) %></p>
           <p><strong>Site internet de l'organisateur:</strong></p>
           <p><%= link_to(swim_race.source_url, swim_race.source_url) %></p>
           <div class="race-data">
@@ -38,7 +38,7 @@
                   <tr>
                     <td><%= event.distance %> km</td>
                     <td><%= event.price %> euros</td>
-                    <td><%= event.comment %></td>
+                    <td><%= simple_format(event.comment) %></td>
                     <td><%= link_to raw('<i class="far fa-trash-alt"></i> Supprimer'), swim_race_swim_event_path(swim_race, event),
                             method: :delete,
                             data: { confirm: "Are you sure?" } %></td>
