change color on sidenav and tried to put black bacokground

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -78,10 +78,13 @@ table {
     right: 0;
     height: 120vh;
     background-color: rgba(0,0,0,.5);
-    z-index:997;
+    display: block;
+    opacity: 1;
+    z-index:auto;
   }
 
-.display {
-  display: block;
-  opacity: 1;
+.hidden {
+ position: absolute !important;
+   top: -9999px !important;
+   left: -9999px !important;
 }
