--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,6 @@
     <%= yield %>
     <%= javascript_include_tag 'application' %>
     <%= javascript_pack_tag 'application' %>
-    <div class="sidenav-overlay" style="display: none;"></div>
+    <div id="opac-background" class="sidenav-overlay hidden"></div>
   </body>
 </html>
