--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -55,7 +55,7 @@
 }
 
 
-#new-race-city-input {
+.new-race-city-input {
     display: block;
     width: 100%;
     height: calc(1.5em + 0.75rem + 2px);
@@ -64,10 +64,10 @@
     font-weight: 400;
     line-height: 1.5;
     color: #495057;
-    background-color: #fff;
+    background-color: #fff!important;
     background-clip: padding-box;
-    border: 1px solid #ced4da;
-    border-radius: 0.25rem;
+    border: 1px solid #ced4da!important;
+    border-radius: 0.25rem!important;
     transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 
